--- a/package.json
+++ b/package.json
@@ -33,9 +33,7 @@
   ],
   "license": "MIT",
   "homepage": "https://github.com/Hopding/standard-fonts",
-  "dependencies": {
-    "pako": "^1.0.6"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/mz": "^0.0.32",
     "@types/node": "^10.5.1",
