--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@pdf-lib/standard-fonts",
-  "version": "1.0.0",
+  "name": "@exodus/pdf-lib-standard-fonts",
+  "version": "1.0.0-exodus0",
   "description": "Metrics for the Standard 14 PDF fonts and their encodings",
   "main": "lib/index.js",
   "scripts": {
