--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "target": "es5",
     "lib": ["es2017"],
     "moduleResolution": "node",
-    "declaration": false,
+    "declaration": true,
     "baseUrl": ".",
     "paths": {
       "*": ["node_modules/*"]
